@@ -10,58 +10,23 @@
 
 
     <build>
-
         <plugins>
-            <!--<plugin>-->
-                <!--<groupId>com.github.temyers</groupId>-->
-                <!--<artifactId>cucumber-jvm-parallel-plugin</artifactId>-->
-                <!--<version>5.0.0</version>-->
-                <!--<executions>-->
-                    <!--<execution>-->
-                        <!--<id>generateRunners</id>-->
-                        <!--<phase>validate</phase>-->
-                        <!--<goals>-->
-                            <!--<goal>generateRunners</goal>-->
-                        <!--</goals>-->
-                        <!--<configuration>-->
-                            <!--<glue>-->
-                                <!--<package>com.platform.steps</package>-->
-                            <!--</glue>-->
-                            <!--<outputDirectory>${project.build.directory}/generated-test-sources/cucumber</outputDirectory>-->
-                            <!--<featuresDirectory>src/test/java/com/platform/features</featuresDirectory>-->
-                            <!--<cucumberOutputDir>target/cucumber-parallel</cucumberOutputDir>-->
-                            <!--<strict>true</strict>-->
-                            <!--<useTestNG>false</useTestNG>-->
-                            <!--<monochrome>true</monochrome>-->
-                            <!--<namingScheme>simple</namingScheme>-->
-                            <!--<parallelScheme>FEATURE</parallelScheme>-->
-                            <!--<plugins>-->
-                                <!--<plugin>-->
-                                    <!--<name>json</name>-->
-                                <!--</plugin>-->
-                            <!--</plugins>-->
-                        <!--</configuration>-->
-                    <!--</execution>-->
-                <!--</executions>-->
-            <!--</plugin>-->
-
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-failsafe-plugin</artifactId>
-                <version>2.19.1</version>
+                <version>2.22.0</version>
                 <executions>
                     <execution>
                         <id>acceptance-test</id>
                         <phase>integration-test</phase>
                         <goals>
                             <goal>integration-test</goal>
+                            <goal>verify</goal>
                         </goals>
                         <configuration>
-                            <forkCount>1</forkCount>
-                            <reuseForks>true</reuseForks>
-                            <includes>
-                                <include>**/*IT.class</include>
-                            </includes>
+                            <parallel>methods</parallel>
+                            <useUnlimitedThreads>true</useUnlimitedThreads>
+                            <testFailureIgnore>true</testFailureIgnore>
                         </configuration>
                     </execution>
                 </executions>
@@ -76,25 +41,11 @@
                     <target>8</target>
                 </configuration>
             </plugin>
-            <!--<plugin>-->
-                <!--<groupId>org.apache.maven.plugins</groupId>-->
-                <!--<artifactId>maven-surefire-plugin</artifactId>-->
-                <!--<version>2.19.1</version>-->
-                <!--<configuration>-->
-                    <!--<testFailureIgnore>true</testFailureIgnore>-->
-                    <!--<parallel>classes</parallel>-->
-                    <!--<threadCount>4</threadCount>-->
-                    <!--<forkMode>perthread</forkMode>-->
-                    <!--<argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>-->
-                    <!--<includes>-->
-                        <!--<include>**/*RunnerClass.java</include>-->
-                    <!--</includes>-->
-                <!--</configuration>-->
-            <!--</plugin>-->
+
             <plugin>
                 <groupId>net.masterthought</groupId>
                 <artifactId>maven-cucumber-reporting</artifactId>
-                <version>3.8.0</version>
+                <version>4.3.0</version>
                 <executions>
                     <execution>
                         <id>execution</id>
@@ -104,10 +55,16 @@
                         </goals>
                         <configuration>
                             <projectName>qa-platform-automation</projectName>
-                            <outputDirectory>target/cucumber-parallel/cucumber-reports</outputDirectory>
-                            <cucumberOutput>target/cucumber-parallel/</cucumberOutput>
+                            <outputDirectory>${project.build.directory}/cucumber-reports</outputDirectory>
+                            <inputDirectory>${project.build.directory}/cucumber/</inputDirectory>
+                            <jsonFiles>
+                                <!-- supports wildcard or name pattern -->
+                                <param>**/*.json</param>
+                            </jsonFiles>
                             <parallelTesting>true</parallelTesting>
                             <buildNumber>822</buildNumber>
+                            <checkBuildResult>true</checkBuildResult>
+                            <parallelTesting>true</parallelTesting>
                         </configuration>
                     </execution>
                 </executions>
@@ -188,7 +145,7 @@
         <dependency>
             <groupId>net.masterthought</groupId>
             <artifactId>cucumber-reporting</artifactId>
-            <version>3.8.0</version>
+            <version>4.3.0</version>
         </dependency>
 
 
